# lugma

./: .gitignore  Example.lugma  Sloths.lugma  That.lugma  go.mod  go.sum  hm.ts  lang.go  main.go
ast/: ast.go  doc.go
ast/extension/: symbol_link.go
backends/: backend.go  filebuilder.go
backends/jsonschema/: jsonschema.go
backends/typescript/: typescript.go
docgen/: docgen.go  embed.go  structure.go
docgen/templates/: main.css  main.js  main.tailwind.css  main.tmpl  tailwind.config.js
examples/echo/: lugma.yaml
examples/echo/Sources/Echo/: Echo.lugma
examples/package/: lugma.yaml
examples/package/Sources/Base/: ItemPosition.lugma
examples/package/Sources/Text/: Docs.md  Guilds.lugma  Protocol.lugma  Sloths.lugma
modules/: modules.go
other/Lugma.NET/: Metadata.cs  RPCError.cs
other/Lugma.NET.HTTP/: Lugma.NET.HTTP.csproj
other/Lugma.NET.HTTP/Client/: HTTPSTransport.cs  WebSocketStream.cs
other/Lugma.NET/Client/: Stream.cs  Transport.cs
other/lugma-express-helpers/: package-lock.json  package.json
other/lugma-express-helpers/src/: index.ts
other/lugma-rs-helpers/: Cargo.toml
other/lugma-rs-helpers/src/: http.rs  lib.rs
other/lugma-server-helpers/: package-lock.json  package.json  tsconfig.json
other/lugma-server-helpers/src/: index.ts
other/lugma-web-helpers/: package-lock.json  package.json  tsconfig.json
other/lugma-web-helpers/src/: index.ts
parser/: parser.c  parser.go  scanner.c
typechecking/: context.go  enum.go  environment.go  flagset.go  module.go  object.go  protocol.go  stream.go  struct.go  type.go
