[package]
name = "lugma-rs-helpers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.139"
async-trait = "0.1.56"
futures = "0.3.21"
reqwest = { version = "0.11", features = ["json"], optional = true }
tokio = { version = "1", features = ["full", "sync"], optional = true }
tokio-tungstenite = { version = "0.17.2", optional = true }
tungstenite = { version = "0.17.2", optional = true }
serde_json = { version = "1.0", optional = true }
async-stream = { version = "0.3.3", optional = true }
tokio-stream = { version = "0.1.9", features = ["sync"], optional = true }

[features]
default = ["http_impl"]
http_impl = ["dep:reqwest", "dep:tokio", "dep:tokio-tungstenite", "dep:tungstenite", "dep:serde_json", "dep:async-stream", "dep:tokio-stream"]
